tips show page no longer cutting off text

--- a/app/assets/stylesheets/tips.scss
+++ b/app/assets/stylesheets/tips.scss
@@ -11,6 +11,7 @@ body{
     width: 100%;
    text-align: center ;
    font-family: Montserrat;
+   height: 100%;
 }
 
 h4{
